2010-08-22  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-xemacs-recompute-modelines): Add
	`slime-xemacs-recompute-modelines' to `pre-idle-hook', this solves
	the problem of synchronization of modelines.
	Thanks to Aidan Kehoe.

2010-08-21  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-recompute-modelines): Recompute modelines only
	for visible buffers. Kludge: modeline can be out of sync if the buffer
	becomes visible and no slime/lisp interaction took place yet.
	Patch by Raymond Toy.
	(slime-search-buffer-package): Revert, with the above
	change caching shouldn't be necessary.

2010-08-21  Helmut Eller  <heller@common-lisp.net>

	Add commands to enable/disable contribs.

	* slime.el (slime-enable-contrib, slime-disable-contrib): New.
	(slime-contrib): New struct to collect meta-data about contribs.
	(define-slime-contrib): Store meta-data in 'slime-contribs plist.
	(slime-all-contribs, slime-find-contrib, slime-read-contrib-name):
	New helpers.

2010-08-21  Anton Kovalenko <anton@sw4me.com>

	Snapshot restore support for SBCL.

	* swank-backend.lisp (background-save-image): New.
	* swank-sbcl.lisp (command-line-args, dup, sys-execv, exec-image)
	(make-fd-stream, background-save-image): New.

2010-08-20  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-maybe-complete-as-filename): Limit backward
	search for #\", it slows down on large buffers.
	Reported by Raymond Toy.
	(slime-search-buffer-package): Cache the package, searching every time
	on large buffers may be slow.

2010-08-15  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (setup-server): Check the coding system before doing
	anything, otherwise it may be eaten by ignore-errors later.

2010-08-13  Helmut Eller  <heller@common-lisp.net>

	Find definition for (def-vm-support-routine NAME ...)

	* swank-cmucl.lisp (vm-support-routine-definitions): New.
	(find-definitions): Use it.

2010-08-12  Stas Boukarev  <stassats@gmail.com>
